<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">resHairvation</string>
    <string name="searchbarHint">Hier suchen…</string>
    <string name="password">Passwort</string>
    <string name="username">Benutzername</string>
    <string name="login">Einloggen</string>
    <string name="gender">Geschlecht</string>
    <string name="register">Registrieren</string>
    <string name="guest">Ohne Login fortfahren</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="email">E-Mail</string>
    <string name="noAccount">noch keinen Account?</string>
    <string name="requiredInput">Erforderliche Eingabe!</string>
    <string name="accountCreated">Account erstellt</string>
    <string name="userAlreadyExists">Benutzer existiert bereits!</string>
    <string name="invalidFirstname">Vorname ungültig!</string>
    <string name="invalidLastname">Nachname ungültig!</string>
    <string name="invalidEmail">E-Mail ungültig!</string>
    <string name="passwordMin8Char">Mindestens 8 Zeichen benötigt</string>
    <string name="passwordMin1Number">Mindestens eine Zahl benötigt</string>
    <string name="passwordMin1UpperLower">Mindestens einen Groß- und Kleinbuchstaben benötigt</string>
    <string name="passwordMin1Special">Mindestens ein Sonderzeichen benötigt</string>
    <string name="userDoesntExist">Benutzer existiert nicht</string>
    <string name="wrongPassword">Falsches Passwort</string>
    <string-array name="genderList">
        <item>männlich</item>
        <item>weiblich</item>
        <item>divers</item>
    </string-array>
    <string name="letsgo">LOSLEGEN</string>
    <string name="hairdresserName">Friseurname</string>
    <string name="address">Adresse</string>
    <string name="status">Status</string>
    <string name="appointment">Termin</string>
    <string name="image">Bild</string>
    <string name="accept">Ja</string>
    <string name="cancel">Abbrechen</string>
    <string name="cancelAppointment">Termin stornieren?</string>
    <string name="cancelAppointment_text">Sind Sie sicher, dass Sie den Termin stornieren möchten?</string>
    <string name="rating">Bewertung</string>
    <string name="phone">Telefon</string>
    <string name="actualPassword">Aktuelles Passwort</string>
    <string name="newPassword">Neues Passwort</string>
    <string name="description">Beschreibung</string>
    <string name="date">Datum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services">Dienstleistungen</string>
    <string name="openings">Öffnungszeiten</string>
</resources>
