<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/hairdresserIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/hairdresserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/hairdresserName"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/hairdresserIcon"
            app:layout_constraintTop_toTopOf="@+id/hairdresserIcon" />

        <TextView
            android:id="@+id/hairdresserAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/address"
            app:layout_constraintBottom_toTopOf="@+id/ratingStar"
            app:layout_constraintEnd_toEndOf="@+id/hairdresserName"
            app:layout_constraintStart_toStartOf="@+id/hairdresserName"
            app:layout_constraintTop_toBottomOf="@+id/hairdresserName" />

        <ImageView
            android:id="@+id/ratingStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="@+id/hairdresserIcon"
            app:layout_constraintStart_toStartOf="@+id/hairdresserName"
            app:srcCompat="@drawable/ic_baseline_star_rate_24" />

        <TextView
            android:id="@+id/hairdresserRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/rating"
            app:layout_constraintBottom_toBottomOf="@+id/ratingStar"
            app:layout_constraintStart_toEndOf="@+id/ratingStar"
            app:layout_constraintTop_toTopOf="@+id/ratingStar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
